--- a/SPA-app/blog/src/app/blog-list/blog-list.component.html
+++ b/SPA-app/blog/src/app/blog-list/blog-list.component.html
@@ -6,7 +6,7 @@
 
 <div class="row">
   <div class="col-lg-12">
-    <h1 class="page_heading">{{title}} ({{getBlogsCount()}})</h1>
+    <h1 class="page_heading">{{title}} {{getBlogsCount() > 0 ? '(' + getBlogsCount() + ')' : ''}}</h1>
   </div>
 </div>
 
