--- a/SPA-app/blog/src/styles.css
+++ b/SPA-app/blog/src/styles.css
@@ -1,17 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
-@import url('https://fonts.googleapis.com/css?family=Barlow+Condensed|Marck+Script&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Barlow+Condensed|Marck+Script|Playfair+Display&display=swap');
 
 body {
   font-family: 'Barlow Condensed', sans-serif;
   font-size: 1.05em;
 }
 
-h1 {
-  font-family: 'Marck Script', cursive;
-}
-
 .page_heading {
+  font-family: 'Playfair Display', serif;
+  font-size: 1.7em;
   margin: 0 auto 25px auto;
   text-align: center;
 }
@@ -21,7 +19,7 @@ h1 {
 }
 
 .bg_front {
-  background-color: #f7f3c9;
+  background-color: #f5f3db;
 }
 
 .post_dates {
