--- a/SPA-app/blog/src/app/about/about.component.html
+++ b/SPA-app/blog/src/app/about/about.component.html
@@ -18,10 +18,10 @@
       <li>Help myself</li>
     </ul>
     <p>
-      I've heard that the best way to learn something is to teach it. I believe in this. I think teaching tests our understanding by forcing us to re-generate what we've learned - not re-gurgitate. Teaching requires assembly - it's not good enough to recite facts, you must put them together and use them.
+      I've heard that the best way to learn something is to teach it. I believe that. I think teaching tests our understanding by forcing us to regenerate what we've learned - not regurgitate. Teaching requires assembly - it's not good enough to recite facts, you must put them together and use them.
     </p>
     <p>
-      As developers, we're forever learning. The more we learn, the more we realize what we haven't learned. It's easy to get lost in the 'new' and not really understand the goal of a given technology.
+      As developers we're forever learning. The more we learn the more we realize what we haven't yet learned. It's easy to get lost in the 'new' and miss out on the fundamentals driving the 'new'.
     </p>
     <p>
       I started learning Angular from a Udemy course in the beginning of 2020. I've grown to really like it. This blog site is a SPA (single page application) built with Angular that communicates with an ASP.NET Core Web API server to retrieve the blog content (posts, comments, etc...).
