Building out creation of posts.

--- a/SPA-app/blog/src/app/about/about.component.html
+++ b/SPA-app/blog/src/app/about/about.component.html
@@ -18,7 +18,7 @@
       <li>Help myself</li>
     </ul>
     <p>
-      I've heard that the best way to learn something is to teach it. I believe that. I think teaching tests our understanding by forcing us to regenerate what we've learned - not regurgitate. Teaching requires assembly - it's not good enough to recite facts, you must put them together and use them.
+      "The best way to learn something is to teach it". I believe that. I think teaching tests our understanding by forcing us to regenerate what we've learned - not regurgitate. Teaching requires assembly - it's not good enough to recite facts, you must put them together and use them.
     </p>
     <p>
       As developers we're forever learning. The more we learn the more we realize what we haven't yet learned. It's easy to get lost in the 'new' and miss out on the fundamentals driving the 'new'.
