--- a/SPA-app/blog/src/app/blog-detail/blog-detail.component.html
+++ b/SPA-app/blog/src/app/blog-detail/blog-detail.component.html
@@ -1,9 +1,9 @@
 <div id="blog_id__{{blog.id}}">
   <div class="blog_header">
-    <div class="post_author">{{blog.author.displayName}}</div>
+    <div class="post_author" title="{{'Written by: ' + blog.author.displayName}}">{{blog.author.displayName}}</div>
     <div class="post_dates">
-      <div class="post_posted_on">{{blog.created | date}}</div>
-      <div *ngIf="blog.lastModified" class="post_updated_on">{{blog.lastModified | date}}</div>
+      <div class="post_posted_on" title="{{'Created: ' + blog.created}}">{{blog.created | date}}</div>
+      <div *ngIf="blog.lastModified" class="post_updated_on" title="{{'Last updated: ' + blog.lastModified}}">{{blog.lastModified | date}}</div>
     </div>
     <div style="clear:both;"></div>
   </div>
