--- a/SPA-app/blog/src/app/nav/nav.component.html
+++ b/SPA-app/blog/src/app/nav/nav.component.html
@@ -14,6 +14,9 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/home']">Posts <span class="sr-only">(current)</span></a>
       </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/create']">Create</a>
+      </li>
     </ul>
   </div>
 </nav>
