--- a/SPA-app/blog/src/app/create-blog-post/create-blog-post.component.css
+++ b/SPA-app/blog/src/app/create-blog-post/create-blog-post.component.css
@@ -1,17 +1,39 @@
 #editor_section {
-    margin: 35px auto;
+  margin: 35px auto;
 }
 
 #save_post_btn {
-    display: block;
-    margin: 15px auto;
+  display: block;
+  margin: 15px auto;
 }
 
-.post_title_lbl {
-    margin-right: 15px;
+.post_title_lbl,
+.post_topics_lbl {
+  margin-right: 15px;
 }
 
 input[name="post_title"] {
-    text-align: center;
-    width: 50%;
+  text-align: center;
+  width: 50%;
+}
+
+.remove_topic_btn {
+  position: absolute;
+  right: 2px;
+}
+
+#blog_topics_dd {
+  min-width: 150px;
+}
+
+.selected_blog_topic {
+  background-color: #f0f0f0;
+  border: 1px solid #e0e0e0;
+  display: inline-block;
+  font-size: 0.9em;
+  margin-right: 10px;
+  min-width: 140px;
+  overflow: hidden;
+  padding: 2px 10px;
+  position: relative;
 }
