--- a/SPA-app/blog/src/app/nav/nav.component.html
+++ b/SPA-app/blog/src/app/nav/nav.component.html
@@ -17,6 +17,12 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/create']">Create</a>
       </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/interviews']">Interviews</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/portfolio']">Portfolio</a>
+      </li>
     </ul>
   </div>
 </nav>
