Added routing service. Minor UI touches.

--- a/SPA-app/blog/src/app/blog-detail/blog-detail.component.css
+++ b/SPA-app/blog/src/app/blog-detail/blog-detail.component.css
@@ -14,12 +14,14 @@
 
 .blog_title {
   text-align: center;
+  font-family: "Barlow Condensed", sans-serif;
   font-size: 1.4em;
   padding: 5px;
 }
 
 .blog_topic {
   color: #4c825c;
+  font-family: "Barlow Condensed", sans-serif;
 }
 
 .blog_header {
