--- a/SPA-app/blog/src/app/create-blog-post/create-blog-post.component.html
+++ b/SPA-app/blog/src/app/create-blog-post/create-blog-post.component.html
@@ -34,7 +34,7 @@
   <div class="col-lg-8 offset-lg-2">
     <form (submit)="save_post($event)" method="post">
       <textarea id="{{html_editor_id}}" placeholder="Text here..."></textarea>
-      <button type="submit" id="save_post_btn" class="btn btn-success">Save Post</button>
+      <button type="submit" id="save_post_btn" [disabled]="!save_btn.enabled" class="btn btn-success">Save Post</button>
     </form>
   </div>
 </div>
