--- a/SPA-app/blog/src/app/interviews/interviews.component.css
+++ b/SPA-app/blog/src/app/interviews/interviews.component.css
@@ -1,6 +1,7 @@
 .interview_heading {
   background: #eceff2;
   border-bottom: 1px solid #c5cbd2;
+  font-family: "Barlow Condensed", sans-serif;
   font-size: 1.3em;
   margin: 0 auto 30px auto;
   padding: 10px;
@@ -16,7 +17,7 @@
 }
 
 .interview_entry_section_alt {
-  background: #f2f2f2;
+  background: #f4f4f4;
 }
 
 .interview_entry {
